# entropy

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
backend/: __init__.py  main.py
backend/agents/: __init__.py  base_agent.py  critic_agent.py  explorer_agent.py  message_bus.py  planner_agent.py  research_agent.py
backend/api/: dependencies.py  routes.py
backend/config/: settings.py
backend/ingestion/: __init__.py  chunker.py  document_loader.py  embedder.py  entity_extractor.py  pipeline.py
backend/memory/: __init__.py  episodic_memory.py  graph_memory.py  vector_memory.py
backend/models/: hypothesis.py  knowledge.py
backend/orchestration/: __init__.py  reasoning_loop.py
backend/reasoning/: __init__.py  critic_evaluator.py  hypothesis_generator.py  knowledge_updater.py
backend/services/: embedding_service.py  llm_service.py
backend/world_model/: __init__.py  model.py
docs/: agents.md  architecture.md  memory.md  reasoning-loop.md  world-model.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  colors_and_type.css  tokens.css
frontend/src/components/: EpisodeLog.jsx  HypothesisCard.jsx  HypothesisList.jsx  HypothesisPanel.jsx  IngestionForm.jsx  IngestionPanel.jsx  KnowledgeGraph.jsx  Sidebar.jsx  (+2 more)
infrastructure/: Dockerfile  docker-compose.yml
notebooks/: event.ics
scripts/: run_reasoning_cycle.py  seed_data.py  setup.sh
tests/: conftest.py  test_api.py  test_ingestion.py  test_memory.py  test_reasoning.py
